--- a/Examen01/app/src/main/AndroidManifest.xml
+++ b/Examen01/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.Examen01"
         tools:targetApi="31">
         <activity
+            android:name=".NuevaPieza"
+            android:exported="false" />
+        <activity
+            android:name=".NuevoDispositivo"
+            android:exported="false" />
+        <activity
+            android:name=".EditarPieza"
+            android:exported="false" />
+        <activity
+            android:name=".EditarDispositivo"
+            android:exported="false" />
+        <activity
+            android:name=".ListaPiezas"
+            android:exported="false" />
+        <activity
+            android:name=".ListaDispositivos"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
